[package]
name = "autokani"
version = "0.0.1"
edition = "2021"
authors = ["Mirthfullee <lihuan0530@gmail.com>"]
description = "A simple macro for generating kani harness."
license = "MIT"
repository = "https://github.com/mirthfulLee/autokani"

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.38", features=["full"]}
quote = "1.0.38"
proc-macro2 = "1.0.38"

[features]
default = ["debug_log"]
debug_log = []